Massively refactored API paths, revisited authorities